--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,12 @@
 [patch.'https://github.com/oscomp/arceos.git']
-axstd = { path = ".arceos/ulib/axstd" }
+axfeat = { path = ".arceos/api/axfeat" }
 arceos_posix_api = { path = ".arceos/api/arceos_posix_api" }
-axhal = { path = ".arceos/modules/axhal" }
-axmm = { path = ".arceos/modules/axmm" }
-axtask = { path = ".arceos/modules/axtask" }
-axsync = { path = ".arceos/modules/axsync" }
-axruntime = { path = ".arceos/modules/axruntime" }
-axns = { path = ".arceos/modules/axns" }
-axfs = { path = ".arceos/modules/axfs" }
+
 axconfig = { path = ".arceos/modules/axconfig" }
+axfs = { path = ".arceos/modules/axfs" }
+axhal = { path = ".arceos/modules/axhal" }
+axlog = { path = ".arceos/modules/axlog" }
+axmm = { path = ".arceos/modules/axmm" }
+axns = { path = ".arceos/modules/axns" }
+axsync = { path = ".arceos/modules/axsync" }
+axtask = { path = ".arceos/modules/axtask" }
